# ai-native-toolkit

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
examples/: basic_extract.py
integrations/: install.py
integrations/antigravity/: SKILL.md
integrations/claude-code/: SKILL.md
integrations/claude-code/talent-scout/: SKILL.md
integrations/codex/: SKILL.md
integrations/codex/agents/: openai.yaml
integrations/cursor/: linkedin-analyzer.mdc
integrations/zeroclaw/: SKILL.md  trait.toml
linkedin_analyzer/: ai_insights.py  cleaner.py  cli.py  deconstructor.py  metrics.py  pdf_report.py  pipeline.py  scraper.py  types.py
linkedin_analyzer/providers/: anthropic_provider.py  base.py  gemini.py  openai_provider.py
talent_scout/: __init__.py  ai_insights.py  cleaner.py  cli.py  pdf_report.py  pipeline.py  scraper.py  types.py
talent_scout/providers/: __init__.py
tests/: test_cleaner.py  test_metrics.py
tests/fixtures/: sample_posts.json
