[project]
name = "ai-native-toolkit"
version = "0.1.0"
description = "LinkedIn profile content strategy analyzer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "google-generativeai>=0.8",
    "openai>=1.0",
    "anthropic>=0.30",
    "fpdf2>=2.8",
]

[project.scripts]
linkedin-analyzer = "linkedin_analyzer.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
